# dermis

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.lua  fgets.c  malloc.c  sleep.c
src/: CMakeLists.txt  gen.py  macros.h  main.c  main.c.template
